Added info about OnFlight integrations and added a buy button

--- a/onflight.html
+++ b/onflight.html
@@ -34,7 +34,7 @@
       <div class="services-holder-reverse">
         <div>
           <h2 class="head">OnFlight Hub</h2>
-          <p class="services-desc-left">OnFlight is a high quality data logger for the General Aviation pilot. OnFlight is ideal for student pilots, CFIs, experimental aircraft builders conducting their Phase I flight test program, and pilots who would enjoy to see their previous flights and their performance. OnFlight Hub includes:</p>
+          <p class="services-desc-left">OnFlight is a high quality data logger for the General Aviation pilot. OnFlight is ideal for student pilots, CFIs, experimental aircraft builders conducting their Phase I flight test program, and pilots who would enjoy to see their previous flights and their performance. OnFlight is also useful for flight schools, aircraft rentals, and insurance providers who would like to monitor their pilot's performance. OnFlight Hub includes:</p>
           <ul class="services-ul">
             <li>50 Hz sample rate, logging to a micro SD card</li>
             <li>High accuracy GPS-aided INS</li>
@@ -45,6 +45,269 @@
           </ul>
         </div>
         <img class="services-img" src="assets/onflight/iso.png" alt="">
+      </div>
+      <div>
+        <p>OnFlight data is natively supported by <a href="https://www.avinet.app">AviNet</a> and a converter for MacOS and Windows is included to convert data to CSV or <a href="https://www.cloudahoy.com">CloudAhoy</a> data formats. Data is streamed in real-time to GDL90 devices, including <a href="https://www.foreflight.com">ForeFlight</a></p>
+      </div>
+      <div class="flex">
+        <a href="https://www.avinet.app"><img class="onflight-img" src="images/avinet_logo.png" alt=""></a>
+        <a href="https://www.cloudahoy.com"><img class="onflight-img" src="images/cloudahoy_logo.jpeg" alt=""></a>
+        <a href="https://www.foreflight.com"><img class="onflight-img" src="images/foreflight_logo.png" alt=""></a>
+      </div>
+      <div>
+        OnFlight Hub is in stock, shipping, and the price is <b>$299</b>.
+      </div>
+      <div>
+        <div id='product-component-1704737635484'></div>
+        <script type="text/javascript">
+        /*<![CDATA[*/
+        (function () {
+          var scriptURL = 'https://sdks.shopifycdn.com/buy-button/latest/buy-button-storefront.min.js';
+          if (window.ShopifyBuy) {
+            if (window.ShopifyBuy.UI) {
+              ShopifyBuyInit();
+            } else {
+              loadScript();
+            }
+          } else {
+            loadScript();
+          }
+          function loadScript() {
+            var script = document.createElement('script');
+            script.async = true;
+            script.src = scriptURL;
+            (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(script);
+            script.onload = ShopifyBuyInit;
+          }
+          function ShopifyBuyInit() {
+            var client = ShopifyBuy.buildClient({
+              domain: 'bolder-flight-systems.myshopify.com',
+              storefrontAccessToken: '5d031c37716943c132181e6697fc221a',
+            });
+            ShopifyBuy.UI.onReady(client).then(function (ui) {
+              ui.createComponent('product', {
+                id: '6868953694310',
+                node: document.getElementById('product-component-1704737635484'),
+                moneyFormat: '%24%7B%7Bamount%7D%7D',
+                options: {
+          "product": {
+            "styles": {
+              "product": {
+                "@media (min-width: 601px)": {
+                  "max-width": "calc(25% - 20px)",
+                  "margin-left": "20px",
+                  "margin-bottom": "50px"
+                }
+              },
+              "button": {
+                "font-size": "16px",
+                "padding-top": "16px",
+                "padding-bottom": "16px",
+                ":hover": {
+                  "background-color": "#69a7cf"
+                },
+                "background-color": "#75b9e6",
+                ":focus": {
+                  "background-color": "#69a7cf"
+                },
+                "border-radius": "6px",
+                "padding-left": "25px",
+                "padding-right": "25px"
+              },
+              "quantityInput": {
+                "font-size": "16px",
+                "padding-top": "16px",
+                "padding-bottom": "16px"
+              },
+              "description": {
+                "font-size": "16px"
+              }
+            },
+            "contents": {
+              "img": false,
+              "title": false,
+              "price": false
+            },
+            "text": {
+              "button": "Add to cart"
+            }
+          },
+          "productSet": {
+            "styles": {
+              "products": {
+                "@media (min-width: 601px)": {
+                  "margin-left": "-20px"
+                }
+              }
+            }
+          },
+          "modalProduct": {
+            "contents": {
+              "img": false,
+              "imgWithCarousel": true,
+              "button": false,
+              "buttonWithQuantity": true
+            },
+            "styles": {
+              "product": {
+                "@media (min-width: 601px)": {
+                  "max-width": "100%",
+                  "margin-left": "0px",
+                  "margin-bottom": "0px"
+                }
+              },
+              "button": {
+                "font-size": "16px",
+                "padding-top": "16px",
+                "padding-bottom": "16px",
+                ":hover": {
+                  "background-color": "#69a7cf"
+                },
+                "background-color": "#75b9e6",
+                ":focus": {
+                  "background-color": "#69a7cf"
+                },
+                "border-radius": "6px",
+                "padding-left": "25px",
+                "padding-right": "25px"
+              },
+              "quantityInput": {
+                "font-size": "16px",
+                "padding-top": "16px",
+                "padding-bottom": "16px"
+              },
+              "title": {
+                "color": "#2b2828"
+              },
+              "description": {
+                "font-family": "Helvetica Neue, sans-serif",
+                "font-weight": "normal",
+                "font-size": "16px",
+                "color": "#4c4c4c"
+              }
+            }
+          },
+          "option": {},
+          "cart": {
+            "styles": {
+              "button": {
+                "font-size": "16px",
+                "padding-top": "16px",
+                "padding-bottom": "16px",
+                ":hover": {
+                  "background-color": "#69a7cf"
+                },
+                "background-color": "#75b9e6",
+                ":focus": {
+                  "background-color": "#69a7cf"
+                },
+                "border-radius": "6px"
+              },
+              "title": {
+                "color": "#4c4c4c"
+              },
+              "header": {
+                "color": "#4c4c4c"
+              },
+              "lineItems": {
+                "color": "#4c4c4c"
+              },
+              "subtotalText": {
+                "color": "#4c4c4c"
+              },
+              "subtotal": {
+                "color": "#4c4c4c"
+              },
+              "notice": {
+                "color": "#4c4c4c"
+              },
+              "currency": {
+                "color": "#4c4c4c"
+              },
+              "close": {
+                "color": "#4c4c4c",
+                ":hover": {
+                  "color": "#4c4c4c"
+                }
+              },
+              "empty": {
+                "color": "#4c4c4c"
+              },
+              "noteDescription": {
+                "color": "#4c4c4c"
+              },
+              "discountText": {
+                "color": "#4c4c4c"
+              },
+              "discountIcon": {
+                "fill": "#4c4c4c"
+              },
+              "discountAmount": {
+                "color": "#4c4c4c"
+              }
+            },
+            "popup": false
+          },
+          "toggle": {
+            "styles": {
+              "toggle": {
+                "background-color": "#75b9e6",
+                ":hover": {
+                  "background-color": "#69a7cf"
+                },
+                ":focus": {
+                  "background-color": "#69a7cf"
+                }
+              },
+              "count": {
+                "font-size": "16px"
+              }
+            }
+          },
+          "lineItem": {
+            "styles": {
+              "variantTitle": {
+                "color": "#4c4c4c"
+              },
+              "title": {
+                "color": "#4c4c4c"
+              },
+              "price": {
+                "color": "#4c4c4c"
+              },
+              "fullPrice": {
+                "color": "#4c4c4c"
+              },
+              "discount": {
+                "color": "#4c4c4c"
+              },
+              "discountIcon": {
+                "fill": "#4c4c4c"
+              },
+              "quantity": {
+                "color": "#4c4c4c"
+              },
+              "quantityIncrement": {
+                "color": "#4c4c4c",
+                "border-color": "#4c4c4c"
+              },
+              "quantityDecrement": {
+                "color": "#4c4c4c",
+                "border-color": "#4c4c4c"
+              },
+              "quantityInput": {
+                "color": "#4c4c4c",
+                "border-color": "#4c4c4c"
+              }
+            }
+          }
+        },
+              });
+            });
+          }
+        })();
+        /*]]>*/
+        </script>
       </div>
       <div>
         <h2 class="head">Documents</h2>
